[gd_scene load_steps=7 format=3 uid="uid://b83b07j4ojeg0"]

[ext_resource type="Script" path="res://Floor scenes/Floor 1/Rooms/f_1_basicroom.gd" id="1_nuekt"]
[ext_resource type="TileSet" uid="uid://br2jrdhmn80al" path="res://Texture/ReadyForUse/TileSet_Master.tres" id="2_5tl04"]
[ext_resource type="PackedScene" uid="uid://cs2quat6d5vk4" path="res://Floor scenes/door.tscn" id="3_q3v6k"]
[ext_resource type="PackedScene" uid="uid://ck7kdw1ggehwl" path="res://enemies/platelets_e.tscn" id="4_fnkay"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0atl"]
size = Vector2(1117, 610)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nkokg"]
size = Vector2(1056, 558)

[node name="f_1_basicroom" type="Node2D"]
script = ExtResource("1_nuekt")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_5tl04")
format = 2
layer_0/tile_data = PackedInt32Array(35, 2, 1, 34, 2, 1, 33, 2, 1, 32, 2, 1, 29, 2, 1, 28, 2, 1, 27, 2, 1, 26, 2, 1, 25, 2, 1, 24, 2, 1, 23, 2, 1, 22, 2, 1, 13, 2, 1, 12, 2, 1, 11, 2, 1, 10, 2, 1, 9, 2, 1, 8, 2, 1, 7, 2, 1, 6, 2, 1, 5, 2, 1, 4, 2, 1, 3, 2, 1, 2, 2, 1, 1, 2, 1, 0, 2, 1, 65571, 2, 1, 131107, 2, 1, 196643, 2, 1, 262179, 2, 1, 327715, 2, 1, 393251, 2, 1, 917539, 2, 1, 983075, 2, 1, 1048611, 2, 1, 1114147, 2, 1, 1179683, 2, 1, 1245219, 2, 1, 1245218, 2, 1, 1245217, 2, 1, 1245216, 2, 1, 1245215, 2, 1, 1245214, 2, 1, 1245213, 2, 1, 1245212, 2, 1, 1245211, 2, 1, 1245210, 2, 1, 1245209, 2, 1, 1245208, 2, 1, 1245207, 2, 1, 1245206, 2, 1, 1245196, 2, 1, 1245195, 2, 1, 1245194, 2, 1, 1245193, 2, 1, 1245192, 2, 1, 1245191, 2, 1, 1245190, 2, 1, 1245189, 2, 1, 1245188, 2, 1, 1245187, 2, 1, 1245186, 2, 1, 1245185, 2, 1, 1245184, 2, 1, 65536, 2, 1, 131072, 2, 1, 196608, 2, 1, 262144, 2, 1, 327680, 2, 1, 393216, 2, 1, 983040, 2, 1, 1048576, 2, 1, 1114112, 2, 1, 1179648, 2, 1, 1245198, 2, 1, 917504, 2, 1, 14, 2, 1, 31, 2, 1, 30, 2, 1, 1245197, 2, 1, 65537, 196610, 0, 131073, 196610, 0, 196609, 196610, 0, 262145, 196610, 0, 327681, 196610, 0, 393217, 196610, 0, 458753, 196610, 0, 524289, 196610, 0, 589825, 196610, 0, 655361, 196610, 0, 720897, 196610, 0, 786433, 196610, 0, 851969, 196610, 0, 917505, 196610, 0, 983041, 196610, 0, 1048577, 196610, 0, 1114113, 196610, 0, 1179649, 196610, 0, 65538, 196610, 0, 131074, 196610, 0, 196610, 196610, 0, 262146, 196610, 0, 327682, 196610, 0, 393218, 196610, 0, 458754, 196610, 0, 524290, 196610, 0, 589826, 196610, 0, 655362, 196610, 0, 720898, 196610, 0, 786434, 196610, 0, 851970, 196610, 0, 917506, 196610, 0, 983042, 196610, 0, 1048578, 196610, 0, 1114114, 196610, 0, 1179650, 196610, 0, 65539, 196610, 0, 131075, 196610, 0, 196611, 196610, 0, 262147, 196610, 0, 327683, 196610, 0, 393219, 196610, 0, 458755, 196610, 0, 524291, 196610, 0, 589827, 196610, 0, 655363, 196610, 0, 720899, 196610, 0, 786435, 196610, 0, 851971, 196610, 0, 917507, 196610, 0, 983043, 196610, 0, 1048579, 196610, 0, 1114115, 196610, 0, 1179651, 196610, 0, 65540, 196610, 0, 131076, 196610, 0, 196612, 196610, 0, 262148, 196610, 0, 327684, 196610, 0, 393220, 196610, 0, 458756, 196610, 0, 524292, 196610, 0, 589828, 196610, 0, 655364, 196610, 0, 720900, 196610, 0, 786436, 196610, 0, 851972, 196610, 0, 917508, 196610, 0, 983044, 196610, 0, 1048580, 196610, 0, 1114116, 196610, 0, 1179652, 196610, 0, 65541, 196610, 0, 131077, 196610, 0, 196613, 196610, 0, 262149, 196610, 0, 327685, 196610, 0, 393221, 196610, 0, 458757, 196610, 0, 524293, 196610, 0, 589829, 196610, 0, 655365, 196610, 0, 720901, 196610, 0, 786437, 196610, 0, 851973, 196610, 0, 917509, 196610, 0, 983045, 196610, 0, 1048581, 196610, 0, 1114117, 196610, 0, 1179653, 196610, 0, 65542, 196610, 0, 131078, 196610, 0, 196614, 196610, 0, 262150, 196610, 0, 327686, 196610, 0, 393222, 196610, 0, 458758, 196610, 0, 524294, 196610, 0, 589830, 196610, 0, 655366, 196610, 0, 720902, 196610, 0, 786438, 196610, 0, 851974, 196610, 0, 917510, 196610, 0, 983046, 196610, 0, 1048582, 196610, 0, 1114118, 196610, 0, 1179654, 196610, 0, 65543, 196610, 0, 131079, 196610, 0, 196615, 196610, 0, 262151, 196610, 0, 327687, 196610, 0, 393223, 196610, 0, 458759, 196610, 0, 524295, 196610, 0, 589831, 196610, 0, 655367, 196610, 0, 720903, 196610, 0, 786439, 196610, 0, 851975, 196610, 0, 917511, 196610, 0, 983047, 196610, 0, 1048583, 196610, 0, 1114119, 196610, 0, 1179655, 196610, 0, 65544, 196610, 0, 131080, 196610, 0, 196616, 196610, 0, 262152, 196610, 0, 327688, 196610, 0, 393224, 196610, 0, 458760, 196610, 0, 524296, 196610, 0, 589832, 196610, 0, 655368, 196610, 0, 720904, 196610, 0, 786440, 196610, 0, 851976, 196610, 0, 917512, 196610, 0, 983048, 196610, 0, 1048584, 196610, 0, 1114120, 196610, 0, 1179656, 196610, 0, 65545, 196610, 0, 131081, 196610, 0, 196617, 196610, 0, 262153, 196610, 0, 327689, 196610, 0, 393225, 196610, 0, 458761, 196610, 0, 524297, 196610, 0, 589833, 196610, 0, 655369, 196610, 0, 720905, 196610, 0, 786441, 196610, 0, 851977, 196610, 0, 917513, 196610, 0, 983049, 196610, 0, 1048585, 196610, 0, 1114121, 196610, 0, 1179657, 196610, 0, 65546, 196610, 0, 131082, 196610, 0, 196618, 196610, 0, 262154, 196610, 0, 327690, 196610, 0, 393226, 196610, 0, 458762, 196610, 0, 524298, 196610, 0, 589834, 196610, 0, 655370, 196610, 0, 720906, 196610, 0, 786442, 196610, 0, 851978, 196610, 0, 917514, 196610, 0, 983050, 196610, 0, 1048586, 196610, 0, 1114122, 196610, 0, 1179658, 196610, 0, 65547, 196610, 0, 131083, 196610, 0, 196619, 196610, 0, 262155, 196610, 0, 327691, 196610, 0, 393227, 196610, 0, 458763, 196610, 0, 524299, 196610, 0, 589835, 196610, 0, 655371, 196610, 0, 720907, 196610, 0, 786443, 196610, 0, 851979, 196610, 0, 917515, 196610, 0, 983051, 196610, 0, 1048587, 196610, 0, 1114123, 196610, 0, 1179659, 196610, 0, 65548, 196610, 0, 131084, 196610, 0, 196620, 196610, 0, 262156, 196610, 0, 327692, 196610, 0, 393228, 196610, 0, 458764, 196610, 0, 524300, 196610, 0, 589836, 196610, 0, 655372, 196610, 0, 720908, 196610, 0, 786444, 196610, 0, 851980, 196610, 0, 917516, 196610, 0, 983052, 196610, 0, 1048588, 196610, 0, 1114124, 196610, 0, 1179660, 196610, 0, 65549, 196610, 0, 131085, 196610, 0, 196621, 196610, 0, 262157, 196610, 0, 327693, 196610, 0, 393229, 196610, 0, 458765, 196610, 0, 524301, 196610, 0, 589837, 196610, 0, 655373, 196610, 0, 720909, 196610, 0, 786445, 196610, 0, 851981, 196610, 0, 917517, 196610, 0, 983053, 196610, 0, 1048589, 196610, 0, 1114125, 196610, 0, 1179661, 196610, 0, 65550, 196610, 0, 131086, 196610, 0, 196622, 196610, 0, 262158, 196610, 0, 327694, 196610, 0, 393230, 196610, 0, 458766, 196610, 0, 524302, 196610, 0, 589838, 196610, 0, 655374, 196610, 0, 720910, 196610, 0, 786446, 196610, 0, 851982, 196610, 0, 917518, 196610, 0, 983054, 196610, 0, 1048590, 196610, 0, 1114126, 196610, 0, 1179662, 196610, 0, 65551, 196610, 0, 131087, 196610, 0, 196623, 196610, 0, 262159, 196610, 0, 327695, 196610, 0, 393231, 196610, 0, 458767, 196610, 0, 524303, 196610, 0, 589839, 196610, 0, 655375, 196610, 0, 720911, 196610, 0, 786447, 196610, 0, 851983, 196610, 0, 917519, 196610, 0, 983055, 196610, 0, 1048591, 196610, 0, 1114127, 196610, 0, 1179663, 196610, 0, 65552, 196610, 0, 131088, 196610, 0, 196624, 196610, 0, 262160, 196610, 0, 327696, 196610, 0, 393232, 196610, 0, 458768, 196610, 0, 524304, 196610, 0, 589840, 196610, 0, 655376, 196610, 0, 720912, 196610, 0, 786448, 196610, 0, 851984, 196610, 0, 917520, 196610, 0, 983056, 196610, 0, 1048592, 196610, 0, 1114128, 196610, 0, 1179664, 196610, 0, 65553, 196610, 0, 131089, 196610, 0, 196625, 196610, 0, 262161, 196610, 0, 327697, 196610, 0, 393233, 196610, 0, 458769, 196610, 0, 524305, 196610, 0, 589841, 196610, 0, 655377, 196610, 0, 720913, 196610, 0, 786449, 196610, 0, 851985, 196610, 0, 917521, 196610, 0, 983057, 196610, 0, 1048593, 196610, 0, 1114129, 196610, 0, 1179665, 196610, 0, 65554, 196610, 0, 131090, 196610, 0, 196626, 196610, 0, 262162, 196610, 0, 327698, 196610, 0, 393234, 196610, 0, 458770, 196610, 0, 524306, 196610, 0, 589842, 196610, 0, 655378, 196610, 0, 720914, 196610, 0, 786450, 196610, 0, 851986, 196610, 0, 917522, 196610, 0, 983058, 196610, 0, 1048594, 196610, 0, 1114130, 196610, 0, 1179666, 196610, 0, 65555, 196610, 0, 131091, 196610, 0, 196627, 196610, 0, 262163, 196610, 0, 327699, 196610, 0, 393235, 196610, 0, 458771, 196610, 0, 524307, 196610, 0, 589843, 196610, 0, 655379, 196610, 0, 720915, 196610, 0, 786451, 196610, 0, 851987, 196610, 0, 917523, 196610, 0, 983059, 196610, 0, 1048595, 196610, 0, 1114131, 196610, 0, 1179667, 196610, 0, 65556, 196610, 0, 131092, 196610, 0, 196628, 196610, 0, 262164, 196610, 0, 327700, 196610, 0, 393236, 196610, 0, 458772, 196610, 0, 524308, 196610, 0, 589844, 196610, 0, 655380, 196610, 0, 720916, 196610, 0, 786452, 196610, 0, 851988, 196610, 0, 917524, 196610, 0, 983060, 196610, 0, 1048596, 196610, 0, 1114132, 196610, 0, 1179668, 196610, 0, 65557, 196610, 0, 131093, 196610, 0, 196629, 196610, 0, 262165, 196610, 0, 327701, 196610, 0, 393237, 196610, 0, 458773, 196610, 0, 524309, 196610, 0, 589845, 196610, 0, 655381, 196610, 0, 720917, 196610, 0, 786453, 196610, 0, 851989, 196610, 0, 917525, 196610, 0, 983061, 196610, 0, 1048597, 196610, 0, 1114133, 196610, 0, 1179669, 196610, 0, 65558, 196610, 0, 131094, 196610, 0, 196630, 196610, 0, 262166, 196610, 0, 327702, 196610, 0, 393238, 196610, 0, 458774, 196610, 0, 524310, 196610, 0, 589846, 196610, 0, 655382, 196610, 0, 720918, 196610, 0, 786454, 196610, 0, 851990, 196610, 0, 917526, 196610, 0, 983062, 196610, 0, 1048598, 196610, 0, 1114134, 196610, 0, 1179670, 196610, 0, 65559, 196610, 0, 131095, 196610, 0, 196631, 196610, 0, 262167, 196610, 0, 327703, 196610, 0, 393239, 196610, 0, 458775, 196610, 0, 524311, 196610, 0, 589847, 196610, 0, 655383, 196610, 0, 720919, 196610, 0, 786455, 196610, 0, 851991, 196610, 0, 917527, 196610, 0, 983063, 196610, 0, 1048599, 196610, 0, 1114135, 196610, 0, 1179671, 196610, 0, 65560, 196610, 0, 131096, 196610, 0, 196632, 196610, 0, 262168, 196610, 0, 327704, 196610, 0, 393240, 196610, 0, 458776, 196610, 0, 524312, 196610, 0, 589848, 196610, 0, 655384, 196610, 0, 720920, 196610, 0, 786456, 196610, 0, 851992, 196610, 0, 917528, 196610, 0, 983064, 196610, 0, 1048600, 196610, 0, 1114136, 196610, 0, 1179672, 196610, 0, 65561, 196610, 0, 131097, 196610, 0, 196633, 196610, 0, 262169, 196610, 0, 327705, 196610, 0, 393241, 196610, 0, 458777, 196610, 0, 524313, 196610, 0, 589849, 196610, 0, 655385, 196610, 0, 720921, 196610, 0, 786457, 196610, 0, 851993, 196610, 0, 917529, 196610, 0, 983065, 196610, 0, 1048601, 196610, 0, 1114137, 196610, 0, 1179673, 196610, 0, 65562, 196610, 0, 131098, 196610, 0, 196634, 196610, 0, 262170, 196610, 0, 327706, 196610, 0, 393242, 196610, 0, 458778, 196610, 0, 524314, 196610, 0, 589850, 196610, 0, 655386, 196610, 0, 720922, 196610, 0, 786458, 196610, 0, 851994, 196610, 0, 917530, 196610, 0, 983066, 196610, 0, 1048602, 196610, 0, 1114138, 196610, 0, 1179674, 196610, 0, 65563, 196610, 0, 131099, 196610, 0, 196635, 196610, 0, 262171, 196610, 0, 327707, 196610, 0, 393243, 196610, 0, 458779, 196610, 0, 524315, 196610, 0, 589851, 196610, 0, 655387, 196610, 0, 720923, 196610, 0, 786459, 196610, 0, 851995, 196610, 0, 917531, 196610, 0, 983067, 196610, 0, 1048603, 196610, 0, 1114139, 196610, 0, 1179675, 196610, 0, 65564, 196610, 0, 131100, 196610, 0, 196636, 196610, 0, 262172, 196610, 0, 327708, 196610, 0, 393244, 196610, 0, 458780, 196610, 0, 524316, 196610, 0, 589852, 196610, 0, 655388, 196610, 0, 720924, 196610, 0, 786460, 196610, 0, 851996, 196610, 0, 917532, 196610, 0, 983068, 196610, 0, 1048604, 196610, 0, 1114140, 196610, 0, 1179676, 196610, 0, 65565, 196610, 0, 131101, 196610, 0, 196637, 196610, 0, 262173, 196610, 0, 327709, 196610, 0, 393245, 196610, 0, 458781, 196610, 0, 524317, 196610, 0, 589853, 196610, 0, 655389, 196610, 0, 720925, 196610, 0, 786461, 196610, 0, 851997, 196610, 0, 917533, 196610, 0, 983069, 196610, 0, 1048605, 196610, 0, 1114141, 196610, 0, 1179677, 196610, 0, 65566, 196610, 0, 131102, 196610, 0, 196638, 196610, 0, 262174, 196610, 0, 327710, 196610, 0, 393246, 196610, 0, 458782, 196610, 0, 524318, 196610, 0, 589854, 196610, 0, 655390, 196610, 0, 720926, 196610, 0, 786462, 196610, 0, 851998, 196610, 0, 917534, 196610, 0, 983070, 196610, 0, 1048606, 196610, 0, 1114142, 196610, 0, 1179678, 196610, 0, 65567, 196610, 0, 131103, 196610, 0, 196639, 196610, 0, 262175, 196610, 0, 327711, 196610, 0, 393247, 196610, 0, 458783, 196610, 0, 524319, 196610, 0, 589855, 196610, 0, 655391, 196610, 0, 720927, 196610, 0, 786463, 196610, 0, 851999, 196610, 0, 917535, 196610, 0, 983071, 196610, 0, 1048607, 196610, 0, 1114143, 196610, 0, 1179679, 196610, 0, 65568, 196610, 0, 131104, 196610, 0, 196640, 196610, 0, 262176, 196610, 0, 327712, 196610, 0, 393248, 196610, 0, 458784, 196610, 0, 524320, 196610, 0, 589856, 196610, 0, 655392, 196610, 0, 720928, 196610, 0, 786464, 196610, 0, 852000, 196610, 0, 917536, 196610, 0, 983072, 196610, 0, 1048608, 196610, 0, 1114144, 196610, 0, 1179680, 196610, 0, 65569, 196610, 0, 131105, 196610, 0, 196641, 196610, 0, 262177, 196610, 0, 327713, 196610, 0, 393249, 196610, 0, 458785, 196610, 0, 524321, 196610, 0, 589857, 196610, 0, 655393, 196610, 0, 720929, 196610, 0, 786465, 196610, 0, 852001, 196610, 0, 917537, 196610, 0, 983073, 196610, 0, 1048609, 196610, 0, 1114145, 196610, 0, 1179681, 196610, 0, 65570, 196610, 0, 131106, 196610, 0, 196642, 196610, 0, 262178, 196610, 0, 327714, 196610, 0, 393250, 196610, 0, 458786, 196610, 0, 524322, 196610, 0, 589858, 196610, 0, 655394, 196610, 0, 720930, 196610, 0, 786466, 196610, 0, 852002, 196610, 0, 917538, 196610, 0, 983074, 196610, 0, 1048610, 196610, 0, 1114146, 196610, 0, 1179682, 196610, 0, 1245205, 196610, 0, 1245204, 196610, 0, 1245203, 196610, 0, 1245202, 196610, 0, 1245200, 196610, 0, 1245199, 196610, 0, 1245201, 196610, 0, 458787, 196610, 0, 524323, 196610, 0, 589859, 196610, 0, 655395, 196610, 0, 720931, 196610, 0, 786467, 196610, 0, 852003, 196610, 0, 21, 196610, 0, 20, 196610, 0, 19, 196610, 0, 18, 196610, 0, 17, 196610, 0, 16, 196610, 0, 15, 196610, 0, 458752, 196610, 0, 524288, 196610, 0, 589824, 196610, 0, 655360, 196610, 0, 720896, 196610, 0, 786432, 196610, 0, 851968, 196610, 0)

[node name="u_room" type="Node2D" parent="."]
position = Vector2(0, -636)

[node name="d_room" type="Node2D" parent="."]
position = Vector2(0, 636)

[node name="l_room" type="Node2D" parent="."]
position = Vector2(-1150, 0)

[node name="r_room" type="Node2D" parent="."]
position = Vector2(1150, 0)

[node name="l_Door" parent="." instance=ExtResource("3_q3v6k")]
position = Vector2(19, 330)

[node name="r_Door" parent="." instance=ExtResource("3_q3v6k")]
position = Vector2(1129, 330)
rotation = 3.14159

[node name="d_Door" parent="." instance=ExtResource("3_q3v6k")]
position = Vector2(582, 620)
rotation = -1.5708

[node name="u_Door" parent="." instance=ExtResource("3_q3v6k")]
position = Vector2(582, 17)
rotation = 1.5708

[node name="overlapping_room_dectetor" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="overlapping_room_dectetor"]
position = Vector2(576.5, 323)
shape = SubResource("RectangleShape2D_y0atl")

[node name="playerblockers" type="Node2D" parent="."]
visible = false

[node name="player_blocker" parent="playerblockers" instance=ExtResource("3_q3v6k")]
position = Vector2(19, 330)
collision_layer = 0
collision_mask = 0

[node name="player_blocker2" parent="playerblockers" instance=ExtResource("3_q3v6k")]
position = Vector2(1129, 330)
rotation = 3.14159
collision_layer = 0
collision_mask = 0

[node name="player_blocker3" parent="playerblockers" instance=ExtResource("3_q3v6k")]
position = Vector2(582, 620)
rotation = -1.5708
collision_layer = 0
collision_mask = 0

[node name="player_blocker4" parent="playerblockers" instance=ExtResource("3_q3v6k")]
position = Vector2(582, 17)
rotation = 1.5708
collision_layer = 0
collision_mask = 0

[node name="Player_detector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player_detector"]
position = Vector2(572, 318)
shape = SubResource("RectangleShape2D_nkokg")

[node name="enemies" type="Node2D" parent="."]

[node name="platelets_E" parent="enemies" instance=ExtResource("4_fnkay")]
position = Vector2(261, 142)
detection_radius = 900.0
move_speed = 200.0

[node name="platelets_E2" parent="enemies" instance=ExtResource("4_fnkay")]
position = Vector2(275, 472)
detection_radius = 900.0
move_speed = 200.0

[node name="platelets_E3" parent="enemies" instance=ExtResource("4_fnkay")]
position = Vector2(890, 161)
detection_radius = 900.0
move_speed = 200.0

[node name="platelets_E4" parent="enemies" instance=ExtResource("4_fnkay")]
position = Vector2(894, 470)
detection_radius = 900.0
move_speed = 200.0

[connection signal="body_entered" from="Player_detector" to="." method="_on_player_detector_body_entered"]
